--- a/src/Presentation/SmartStore.Web/Administration/Views/Export/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Export/List.cshtml
@@ -12,7 +12,9 @@
         @T("Common.Export")
     </div>
     <div class="options">
-        <a href="@Url.Action("Create")" class="btn btn-primary export-profile-button"><i class="fa fa-plus"></i>&nbsp;@T("Admin.Common.AddNew")</a>
+        <a href="javascript:void(0)" data-url="@Url.Action("Create")" class="btn btn-primary export-profile-button">
+			<i class="fa fa-plus"></i>&nbsp;@T("Admin.Common.AddNew")
+		</a>
     </div>
 </div>
 
@@ -113,14 +115,14 @@
 else
 {
 	<div class="alert alert-info">
-		<button type="button" class="close" data-dismiss="alert">×</button>
+		<button type="button" class="close" data-dismiss="alert">&#215;</button>
 		@T("Admin.DataExchange.Export.NoProfiles")
 	</div>
 }
 
 <div id="export-profile-dialog" class="modal modal-large hide fade" tabindex="-1" data-profile="@T("Common.Profile")">
 	<div class="modal-header">
-		<button type="button" class="close" data-dismiss="modal"><b>x</b></button>
+		<button type="button" class="close" data-dismiss="modal"><b>&#215;</b></button>
 		<h4 class="caption"></h4>
 	</div>
 	<div class="modal-body"></div>
@@ -132,7 +134,7 @@ else
 
 <div id="export-profile-file-dialog" class="modal modal-large hide fade" tabindex="-1">
 	<div class="modal-header">
-		<button type="button" class="close" data-dismiss="modal"><b>x</b></button>
+		<button type="button" class="close" data-dismiss="modal"><b>&#215;</b></button>
 		<h4 class="caption">@T("Admin.DataExchange.Export.ExportFiles")</h4>
 	</div>
 	<div class="modal-body"></div>
