--- a/src/Presentation/SmartStore.Web/Administration/Views/Import/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Import/List.cshtml
@@ -1,7 +1,7 @@
 ﻿@using SmartStore.Core.Domain.DataExchange;
 @using SmartStore.Admin.Models.DataExchange;
 @using Telerik.Web.Mvc.UI;
-@model List<ImportProfileModel>
+@model ImportProfileListModel
 @{
 	ViewBag.Title = T("Common.Import").Text;
 }
@@ -12,7 +12,9 @@
         @T("Common.Import")
     </div>
     <div class="options">
-        <a href="@Url.Action("Create")" class="btn btn-primary"><i class="fa fa-plus"></i>&nbsp;@T("Admin.Common.AddNew")</a>
+        <a href="javascript:void(0)" data-url="@Url.Action("Create")" class="btn btn-primary import-profile-button">
+			<i class="fa fa-plus"></i>&nbsp;@T("Admin.Common.AddNew")
+		</a>
     </div>
 </div>
 
@@ -20,7 +22,7 @@
 	<input type="hidden" name="Id" value="" />
 </form>
 
-@if(Model.Count > 0)
+@if(Model.Profiles.Any())
 {
 	<table id="import-profile-list" class="table admin-table">
 		<thead>
@@ -35,7 +37,7 @@
 			</tr>
 		</thead>
 		<tbody>
-			@foreach (var profile in Model)
+			@foreach (var profile in Model.Profiles)
 			{
 				<tr data-profile-id="@profile.Id" data-task-id="@profile.ScheduleTaskId" class="@(profile.Enabled ? "" : "disabled")">
 					<td>
@@ -91,13 +93,57 @@
 else
 {
 	<div class="alert alert-info">
-		<button type="button" class="close" data-dismiss="alert">×</button>
+		<button type="button" class="close" data-dismiss="alert">&#215;</button>
 		@T("Admin.DataExchange.Import.NoProfiles")
 	</div>
 }
 
+<div id="import-profile-dialog" class="modal modal-large hide fade" tabindex="-1" data-profile="@T("Common.Profile")">
+	<div class="modal-header">
+		<button type="button" class="close" data-dismiss="modal"><b>&#215;</b></button>
+		<h4 class="caption">@T("Common.Profile") - @T("Admin.Common.AddNew")</h4>
+	</div>
+	<div class="modal-body">
+		<div class="alert alert-info">
+			<button type="button" class="close" data-dismiss="alert">&#215;</button>
+			@T("Admin.DataExchange.Import.ProfileEntitySelectNote")
+		</div>
+		<div>
+			<table class="adminContent">
+				<tr>
+					<td class="adminTitle">
+						@Html.SmartLabelFor(x => x.EntityType)
+					</td>
+					<td class="adminData">
+						@Html.DropDownListFor(x => x.EntityType, Model.AvailableEntityTypes)
+					</td>
+				</tr>
+			</table>
+		</div>
+		<p>&nbsp;</p>
+	</div>
+	<div class="modal-footer">
+		<button class="btn btn-primary">@T("Common.OK")</button>
+		<button class="btn" data-dismiss="modal">@T("Common.Cancel")</button>
+	</div>
+</div>
+
 <script type="text/javascript">
 	jQuery(document).ready(function () {
+
+		// show profile dialog
+		$(document).on('click', '.import-profile-button', function (e) {
+			e.preventDefault();
+			$('#import-profile-dialog').modal('show');
+			return false;
+		});
+
+		// create profile
+		$('#import-profile-dialog').on('click', '.btn-primary', function (e) {
+			var entityType = $('#import-profile-dialog').find('select[name=EntityType]').val();
+			location.href = '@(Url.Action("Create"))' + '?entityType=' + entityType;
+			return false;
+		});
 
 		// start task
 		$(document).on('click', '.btn-run-task', function (e) {
