--- a/src/Presentation/SmartStore.Web/Administration/Content/admin.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/admin.less
@@ -42,6 +42,11 @@ a:hover {
 	background-color: @dropdownLinkBackgroundHover;
 }
 
+.alert {
+    padding-top: 14px;
+    padding-bottom: 14px;
+}
+
 /* Page
 -------------------------------------------------------------- */
 
