--- a/src/Presentation/SmartStore.Web/Administration/Views/Import/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Import/_CreateOrUpdate.cshtml
@@ -140,8 +140,6 @@ else if (Model.ExistingFileNames.Count > 1)
 	</table>
 </div>
 
-<p></p>
-
 @if (Model.Id != 0)
 {
 	if (Model.CsvConfiguration != null)
@@ -153,7 +151,7 @@ else if (Model.ExistingFileNames.Count > 1)
 		@Html.Partial("CsvConfiguration", Model.CsvConfiguration, viewData)
 	}
 
-	if (Model.ColumnMappings != null && Model.ColumnMappings.Any() && Model.ExistingFileNames.Any())
+	if (Model.ExistingFileNames.Any())
 	{
 		@Html.Partial("_ColumnMappings")
 	}
@@ -211,27 +209,79 @@ else if (Model.ExistingFileNames.Count > 1)
 			return false;
 		});
 
-		// init column mappings select boxes
-		$('#ImportColumnMappings').find('select[name^="ColumnMapping.Property."]').select2({
-			allowClear: true,
-			minimumResultsForSearch: 16,
-			formatResult: columnMappingFormatting,
-			formatSelection: columnMappingFormatting,
-			matcher: function (term, text, opt) {
-				var searchFor = term.toUpperCase();
+		// mapping row handling
+		$('#ImportColumnMappings').on('change', '.mapping-control-property', function () {
+			var row = $(this).closest('tr');
+			if (row.hasClass('column-mapping-new')) {
+				var property = $(this).val(),
+					hasProperty = !_.isEmpty(property);
 
-				if (text.toUpperCase().indexOf(searchFor) >= 0)
-					return true;
+				row.find('.mapping-control-column').select2('val', property).select2(hasProperty ? 'enable' : 'disable').prop('disabled', !hasProperty);
+				row.find('.mapping-control-default').prop('disabled', !hasProperty);
 
-				var val = $(opt).val();
-				if (val && val.toUpperCase().indexOf(searchFor) >= 0)
-					return true;
-
-				return false;
+				var hasColumn = !_.isEmpty(row.find('.mapping-control-column').select2('val'));
+				row.find('.mapping-button-add').toggle(hasProperty && hasColumn);
 			}
+		}).on('change', '.mapping-control-column', function () {
+			var row = $(this).closest('tr');
+			if (row.hasClass('column-mapping-new')) {
+				var hasColumn = !_.isEmpty($(this).val()),
+					hasProperty = !_.isEmpty(row.find('.mapping-control-property').val());
+
+				row.find('.mapping-button-add').toggle(hasProperty && hasColumn);
+			}
+		}).on('click', '.mapping-button-add', function () {
+			var row = $(this).closest('tr'),
+				table = row.closest('table'),
+				index = parseInt(table.attr('data-maxindex')) + 1;
+
+			row.find('.mapping-control-property').attr('name', 'ColumnMapping.Property.' + index);
+			row.find('.mapping-control-column').attr('name', 'ColumnMapping.Column.' + index);//.prop('disabled', false);
+			row.find('.mapping-control-default').attr('name', 'ColumnMapping.Default.' + index);
+
+			table.attr('data-maxindex', index);
+
+			row.removeClass('column-mapping-new');
+			row.find('.mapping-button-add').remove();
+			row.find('.mapping-button-delete').show();
+
+			appendNewMappingRow();
+		}).on('click', '.mapping-button-delete', function () {
+			$(this).closest('tr').remove();
 		});
 
-		function columnMappingFormatting(item, container, query) {
+		appendNewMappingRow();
+
+
+		function appendNewMappingRow() {
+			var mappings = $('#ImportColumnMappings');
+			if (!mappings.length)
+				return;
+
+			var html = $('#ColumnMappingTemplate').find('table tbody').html();
+
+			mappings.find('table:first tbody').append(html);
+
+			var row = mappings.find('table:first tr:last');
+
+			row.find('.mapping-control-property').select2({
+				allowClear: true,
+				minimumResultsForSearch: 16,
+				formatResult: selectPropertyFormatting,
+				formatSelection: selectPropertyFormatting,
+				matcher: selectMatcher
+			});
+
+			row.find('.mapping-control-column').select2({
+				allowClear: true,
+				minimumResultsForSearch: 16,
+				formatResult: selectColumnFormatting,
+				formatSelection: selectColumnFormatting,
+				matcher: selectMatcher
+			});
+		}
+
+		function selectPropertyFormatting(item, container, query) {
 			try {
 				if (item.text.length > 0) {
 					var option = $(item.element),
@@ -248,7 +298,6 @@ else if (Model.ExistingFileNames.Count > 1)
 						if (option.index() === 1) {
 							mappedProperties = [];
 
-							// localized properties occur\mapped multiple times... that's why we cannot hide or deactivate list items.
 							$('#ImportColumnMappings').find('select[name^="ColumnMapping.Property."]').each(function () {
 								var value = $(this).val();
 								if (!_.isEmpty(value)) {
@@ -270,15 +319,14 @@ else if (Model.ExistingFileNames.Count > 1)
 					html += '<span class="muted pull-right" style="font-size: 0.9em;">' + item.id + '</span>';
 
 					html += '<span class="ml4" style="display: inline-block;" title="';
-					if (item.text.length > 60) {
-						html += item.text + '">' + item.text.substring(0, 60) + '…';
+					if (item.text.length > 50) {
+						html += item.text + '">' + item.text.substring(0, 50) + '…';
 					}
 					else {
 						html += '">' + item.text;
 					}
 					html += '</span>';
 					html += '</div>';
-
 					return html;
 				}
 			}
@@ -286,5 +334,48 @@ else if (Model.ExistingFileNames.Count > 1)
 
 			return item.text;
 		}
+
+		function selectColumnFormatting(item, container, query) {
+			try {
+				if (item.text.length > 0) {
+					var html = '';
+
+					if (item.element) {
+						html += '<div class="clear"></div>';
+					}
+
+					html += '<div>';
+					html += '<span class="muted pull-right" style="font-size: 0.9em;">' + item.id + '</span>';
+
+					html += '<span title="';
+					if (item.text.length > 50) {
+						html += item.text + '">' + item.text.substring(0, 50) + '…';
+					}
+					else {
+						html += '">' + item.text;
+					}
+					html += '</span>';
+					html += '</div>';
+					return html;
+				}
+			}
+			catch (e) { }
+
+			return item.text;
+		}
+
+		function selectMatcher(term, text, opt) {
+			var searchFor = term.toUpperCase();
+
+			if (text.toUpperCase().indexOf(searchFor) >= 0)
+				return true;
+
+			var val = $(opt).val();
+			if (val && val.toUpperCase().indexOf(searchFor) >= 0)
+				return true;
+
+			return false;
+		}
+
 	});
 </script>
